--- a/frontend-reactjs-vite/src/components/history/history.scss
+++ b/frontend-reactjs-vite/src/components/history/history.scss
@@ -46,6 +46,7 @@
           text-align: center;
         }
         .button {
+          cursor: pointer;
           font-size: 20px;
           background: rgba(224, 255, 255, 0.849);
           padding: 10px;
