--- a/frontend-reactjs-vite/src/components/navbar/navbar.scss
+++ b/frontend-reactjs-vite/src/components/navbar/navbar.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -18,6 +19,9 @@
     }
     .text {
       padding-left: 10px;
+      @include lg {
+        display: none;
+      }
     }
   }
   .items {
@@ -26,11 +30,15 @@
     justify-content: space-between;
     .item {
       padding: 15px 20px;
+      border: 1px solid white;
       &:hover {
         background: linear-gradient($cyan-200, $blue-300);
         border-radius: 10px;
         border: 1px solid lightblue;
       }
+    }
+    @include lg {
+      display: none;
     }
   }
   .login {
@@ -40,10 +48,54 @@
     width: 20%;
     .text {
       padding: 15px 20px;
+      border: 1px solid white;
       &:hover {
         background: linear-gradient($cyan-200, $blue-300);
         border-radius: 10px;
         border: 1px solid lightblue;
+      }
+    }
+    @include lg {
+      display: none;
+    }
+  }
+  .hamburger {
+    display: none;
+    z-index: 1;
+    padding: 20px;
+    img {
+      z-index: 2;
+      width: 30px;
+      height: 30px;
+    }
+    @include lg {
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+    }
+    .menu {
+      top: 30px;
+      right: 10px;
+      position: absolute;
+      width: 300px;
+      height: fit-content;
+      display: flex;
+      flex-direction: column;
+      background-color: white;
+      border: 1px solid gray;
+      border-radius: 10px;
+      .items {
+        margin-top: 30px;
+        padding-top: 10px;
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+        .item {
+          margin: 10px;
+          width: 280px;
+          text-align: center;
+        }
       }
     }
   }
